--- a/package.json
+++ b/package.json
@@ -9,11 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-draw": "^1.3.0",
     "@nextui-org/react": "^1.0.0-beta.10",
+    "@types/byte-size": "^8.1.0",
+    "@types/geojson": "^7946.0.10",
+    "@types/mapbox__mapbox-gl-draw": "^1.3.3",
+    "byte-size": "^8.1.0",
+    "geojson": "^0.5.0",
+    "geojson-validation": "^1.0.2",
+    "maplibre-gl": "^2.4.0",
     "next": "13.0.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^4.6.0",
+    "react-json-view": "^1.21.3"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
